# cero

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cero.tagfile.xml  README.md  ReSharper.DotSettings  SECURITY.md  annotated.html  class_cero_1_1_lexical_analysis.html  concepts.html  files.html  index.html  main_8cc.html  modules.html  namespace_cero.html  namespaces.html  pages.html  searchdata-v2.js  struct_cero_1_1_token.html
.cache/clangd/index/: cero-lexer.cc.559CE7A2BC5862B8.idx  cero-lexer.hh.AABAC2A4C16E4D43.idx  main.cc.7514E88328007E0A.idx  main.cc.8D27AB633F759C03.idx  main.cc.AC639335DBDB180C.idx  main.cc.D0BF8FEA858A1D0E.idx
.github/workflows/: ci.yml  gh-pages.yml 
cero/: CMakeLists.txt  cero-abstract-syntax-tree-visitor.hh  cero-abstract-syntax-tree.cc  cero-ast-visitor.hh  cero-ast.cc  cero-ast.hh  cero-codegen-llvm.hh  cero-lexer.cc  cero-lexer.hh  cero-parse.cc  cero-parse.hh  main.cc
cero-ast/: CMakeLists.txt  cero-ast.cc  cero-ast.hh
cero-lexer/: CMakeLists.txt  cero-lexer.cc  cero-lexer.hh  main.cc
cero-parse/: CMakeLists.txt  cero-parse.cc  cero-parse.hh  main.cc
docs/: poxy.toml
hooks/: pre-commit
src/: CMakeLists.txt  cero-abstract-syntax-tree.hh  cero-codegen-llvm.cc  cero-concrete-syntax-tree.cc  cero-concrete-syntax-tree.hh  cero-lexer.cc  cero-lexer.hh  cero-lexical-analysis.cc  cero-lexical-analysis.hh  cero-semantic.cc  cero-symbol-table.cc  cero-token.def  cero-token.hh  main.cc
src/cero/: main.cero
src/cero-bootstrap/: CMakeLists.txt  cero-abstract-syntax-tree.cc  cero-abstract-syntax-tree.hh  cero-concrete-syntax-tree.cc  cero-concrete-syntax-tree.hh  cero-just-in-time.cc  cero-just-in-time.hh  cero-lexer.cc  cero-lexer.hh  cero-semantic.hh  cero-symbol-table.hh  main.cc  main.cero
src/cplusplus/: CMakeLists.txt  cero-abstract-syntax-tree.hh  cero-codegen-llvm.hh  cero-concrete-syntax-tree.cc  cero-concrete-syntax-tree.hh  main.cc
vscode/: README.md  package.json  tsconfig.json
vscode/src/: extension.ts
